--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "TheKarters_EnviroAssets"]
 	path = TheKarters_EnviroAssets
 	url = git@github.com:PixelEdgeGames/TheKarters_EnviroAssets.git
+[submodule "Assets/TheKarters_Workshop_Content"]
+	path = Assets/TheKarters_Workshop_Content
+	url = git@github.com:PixelEdgeGames/TheKarters_Workshop_Content.git
