--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Assets/Workshop_Content"]
 	path = Assets/Workshop_Content
 	url = git@github.com:PixelEdgeGames/TheKarters_Workshop_Content.git
+[submodule "Workshop_Module"]
+	path = Workshop_Module
+	url = git@github.com:PixelEdgeGames/TheKarters_WorkshopModule.git
