--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "TheKarters_EnviroAssets"]
-	path = TheKarters_EnviroAssets
-	url = git@github.com:PixelEdgeGames/TheKarters_EnviroAssets.git
 [submodule "Assets/Workshop_Content"]
 	path = Assets/Workshop_Content
 	url = git@github.com:PixelEdgeGames/TheKarters_Workshop_Content.git
 [submodule "Assets/Workshop_Module"]
 	path = Assets/Workshop_Module
 	url = git@github.com:PixelEdgeGames/TheKarters_WorkshopModule.git
+[submodule "Assets/TheKarters_EnviroAssets"]
+	path = Assets/TheKarters_EnviroAssets
+	url = git@github.com:PixelEdgeGames/TheKarters_EnviroAssets.git
